[build-system]
requires = ["scikit-build-core>=0.9", "cmake>=3.18,<4", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "pycryptosat"
version = "5.14.3"
description = "Bindings to CryptoMiniSat, an advanced SAT solver"
keywords = ["sat", "cryptography"]
license = { file = "LICENSE.txt" }
maintainers = [{name="Mate Soos", email="soos.mate@gmail.com"}]
authors = [{name="Mate Soos", email="soos.mate@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
    ]
requires-python = ">=3.8"
readme = "python/README.md"

[tool.scikit-build]
cmake.build-type = "Release"
# BUILD_SHARED_LIBS=OFF → cryptominisat5 becomes a static lib linked into the extension
# CMAKE_POSITION_INDEPENDENT_CODE=ON → required so the static lib can be linked into a .so
cmake.args = [
    "-DBUILD_PYTHON_EXTENSION=ON",
    "-DENABLE_TESTING=OFF",
    "-DBUILD_SHARED_LIBS=OFF",
    "-DCMAKE_POSITION_INDEPENDENT_CODE=ON",
    "-DIPASIR=OFF",
    "-DCMAKE_C_COMPILER_LAUNCHER=ccache",
    "-DCMAKE_CXX_COMPILER_LAUNCHER=ccache",
]
wheel.packages = []          # pure-Python packages to include (none; extension only)
install.components = ["python"]  # only install the pycryptosat.so, not the full CMS install

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "pp* *-musllinux* *i686"
build-frontend = "build"
test-requires = "pytest"
test-command = "cd /tmp && pytest {project}/python/tests"

[tool.cibuildwheel.linux]
# manylinux_2_34 = AlmaLinux 9; gmp-devel/mpfr-devel ship .pc files so pkg-config works.
manylinux-x86_64-image = "manylinux_2_34"
manylinux-aarch64-image = "manylinux_2_34"
before-all = "yum install -y epel-release && yum install -y ccache gmp-devel"
# CCACHE_DIR must be under /project so the host-side actions/cache step can reach it.
environment = { CCACHE_DIR = "/project/.ccache" }
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
# GMP is not a macOS system library; brew installs it and delocate bundles it.
before-all = "brew install gmp ccache || true"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
