[project]
name = "pycryptosat"
version = "5.11.0"
authors = [ { name="Mate Soos", email="soos.mate@gmail.com" } ]
description = "Bindings to CryptoMiniSat, an advanced SAT solver"
readme = "python/README.rst"
license = { file="LICENSE.txt" }
requires-python ">=3.5"
classifiers = [ "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"]

[project.urls]
"Homepage" = "https://www.github.com/msoos/cryptominisat"
"Bug Tracker" = "https://www.github.com/msoos/cryptominisat/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
