[metadata]
name = pycryptosat
version = 5.11.1
author = Mate Soos
author_email= soos.mate@gmail.com
maintainer = Mate Soos
maintainer_email= soos.mate@gmail.com
description = Bindings to CryptoMiniSat, an advanced SAT solver
long_description = file:python/README.rst
license = MIT
license_file = LICENSE.txt
keywords = sat, cyptography
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: MIT License
    Topic :: Utilities
project_urls =
    changelog = https://github.com/msoos/cryptominisat/releases
    documentation = https://github.com/msoos/cryptominisat
    homepage = https://www.msoos.org
    repository = https://github.com/msoos/cryptominisat

[options]
python_requires = >=3.5
